@@ -43,7 +43,7 @@ do
             $query = $db->Execute ("UPDATE {$db->prefix}ships SET sector = ?, cleared_defences=' ' WHERE ship_id=?", array ($newsector, $row['ship_id']));
             DbOp::dbResult ($db, $query, __LINE__, __FILE__);
             PlayerLog::writeLog ($db, $row['ship_id'], LOG_TOW, "$row[sector]|$newsector|$row[max_hull]");
-            LogMove::writeLog ($db, $row['ship_id'], $newsector);
+            BntLogMove::writeLog ($db, $row['ship_id'], $newsector);
             $res->MoveNext();
         }
     }
